src/objects/Opportunity/fields/Authorized_for_Pricing_manager__c.field-meta.xml
<CustomField>
    <fullName>Authorized_for_Pricing_manager__c</fullName>
    <label>Authorized for Pricing manager</label>
    <summaryFilterItems>
        <field>Offer__c.Authorized_for_Pricing_Manager__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Offer__c.ActiveOffer__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>