src/objects/Opportunity/fields/AutopopOff__c.field-meta.xml
<CustomField>
    <fullName>AutopopOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutopopOff</label>
    <type>Checkbox</type>
</CustomField>