src/objects/Opportunity/fields/Avionics_Count__c.field-meta.xml
<CustomField>
    <fullName>Avionics_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Avionics_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>