src/objects/Opportunity/fields/Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Date__c</fullName>
    <formula>if( left( Record_Type_Name__c , 13 ) = &quot;D&amp;S PrePriced&quot;, TODAY() ,  CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>