src/objects/Opportunity/fields/B_LICENSED_DATA__c.field-meta.xml
<CustomField>
    <fullName>B_LICENSED_DATA__c</fullName>
    <label>B (LICENSED DATA)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Supercede</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
            <value>
                <fullName>Supercede or Supplement or N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>