src/objects/Opportunity/fields/BAFO__c.field-meta.xml
<CustomField>
    <fullName>BAFO__c</fullName>
    <inlineHelpText>The % above the approved Best and Final offer from which the sale was actually secured.</inlineHelpText>
    <label>BAFO%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>