src/objects/Opportunity/fields/Bid_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type_Name__c</fullName>
    <inlineHelpText>Bid type for this opportunity</inlineHelpText>
    <label>Bid Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bridge</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>LTA</fullName>
            </value>
            <value>
                <fullName>On Contract Growth</fullName>
            </value>
            <value>
                <fullName>Sole Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>