src/objects/Opportunity/fields/Booked_Total_Price_2013__c.field-meta.xml
<CustomField>
    <fullName>Booked_Total_Price_2013__c</fullName>
    <label>Booked Total Price CY</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Type__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.ServiceDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.ServiceDate</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>