src/objects/Opportunity/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bendix</fullName>
            </value>
            <value>
                <fullName>Garrett</fullName>
            </value>
            <value>
                <fullName>Honeywell</fullName>
            </value>
            <value>
                <fullName>Jurid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>