src/objects/Opportunity/fields/Bus_Devt_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Bus_Devt_Initiative__c</fullName>
    <description>Req 5786. Feb 2018 release. Value is copied from converted leads or opptys created from contacts .</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bus Devt Initiative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>