src/objects/Opportunity/fields/BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>BusinessContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BusinessContact</relationshipName>
    <type>Lookup</type>
</CustomField>