src/objects/Opportunity/fields/C_CONFIG_LIST__c.field-meta.xml
<CustomField>
    <fullName>C_CONFIG_LIST__c</fullName>
    <label>C (CONFIG LIST)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Supercede</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
            <value>
                <fullName>Supercede or Supplement or N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>