src/objects/Opportunity/fields/Cash_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Cash_Rebate__c</fullName>
    <description>Used to capture Selectable Equipment Concessions that are secured upon Closed Won.</description>
    <label>Cash Rebate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>