src/objects/Opportunity/fields/CBT_Directorate__c.field-meta.xml
<CustomField>
    <fullName>CBT_Directorate__c</fullName>
    <inlineHelpText>CBT Directorate responsible for this opportunity</inlineHelpText>
    <label>CBT Directorate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBT_Team_Tier_3__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Alternative Power</fullName>
            </value>
            <value>
                <fullName>Advanced Cockpit Enablers</fullName>
            </value>
            <value>
                <fullName>Advanced Flight Deck Systems</fullName>
            </value>
            <value>
                <fullName>Advanced Sensing Technology</fullName>
            </value>
            <value>
                <fullName>AI/ML, VHM, and Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Air and Thermal</fullName>
            </value>
            <value>
                <fullName>AT Materials</fullName>
            </value>
            <value>
                <fullName>ATM Systems</fullName>
            </value>
            <value>
                <fullName>Biometrics</fullName>
            </value>
            <value>
                <fullName>Communication &amp; Surveillance</fullName>
            </value>
            <value>
                <fullName>Component Validation</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Demonstrator Engines</fullName>
            </value>
            <value>
                <fullName>Design &amp; Development Engineering</fullName>
            </value>
            <value>
                <fullName>Electric Power</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>GLSS</fullName>
            </value>
            <value>
                <fullName>Healthcare Logistics</fullName>
            </value>
            <value>
                <fullName>Health IT</fullName>
            </value>
            <value>
                <fullName>HTSI - Other</fullName>
            </value>
            <value>
                <fullName>Human Factors and Assurance</fullName>
            </value>
            <value>
                <fullName>Intelligence</fullName>
            </value>
            <value>
                <fullName>LISC</fullName>
            </value>
            <value>
                <fullName>Logistics Other Items</fullName>
            </value>
            <value>
                <fullName>Materials and Coatings</fullName>
            </value>
            <value>
                <fullName>Mechanical Technologies and Applications</fullName>
            </value>
            <value>
                <fullName>MEMS Processes</fullName>
            </value>
            <value>
                <fullName>Navigation, Controls and Surveillance</fullName>
            </value>
            <value>
                <fullName>Navigation &amp; Radar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>