src/objects/Opportunity/fields/CBT_HIPI__c.field-meta.xml
<CustomField>
    <fullName>CBT_HIPI__c</fullName>
    <label>HIPI CBT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aero Level Other</fullName>
            </value>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>APAC OEM</fullName>
            </value>
            <value>
                <fullName>ATR EMEAI OEM</fullName>
            </value>
            <value>
                <fullName>ATR Other</fullName>
            </value>
            <value>
                <fullName>Bendix King CBT</fullName>
            </value>
            <value>
                <fullName>BGA Aftermarket</fullName>
            </value>
            <value>
                <fullName>BGA Other</fullName>
            </value>
            <value>
                <fullName>Boeing ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier BGA</fullName>
            </value>
            <value>
                <fullName>Components Business</fullName>
            </value>
            <value>
                <fullName>D&amp;S OTHER</fullName>
            </value>
            <value>
                <fullName>DAA</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
            <value>
                <fullName>DMA</fullName>
            </value>
            <value>
                <fullName>DMM</fullName>
            </value>
            <value>
                <fullName>DSE</fullName>
            </value>
            <value>
                <fullName>DSPC</fullName>
            </value>
            <value>
                <fullName>Embraer ATR</fullName>
            </value>
            <value>
                <fullName>Embraer BGA</fullName>
            </value>
            <value>
                <fullName>FM&amp;T</fullName>
            </value>
            <value>
                <fullName>General Aviation Europe</fullName>
            </value>
            <value>
                <fullName>Gulfstream/IAI</fullName>
            </value>
            <value>
                <fullName>HTSI</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Intracompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>