src/objects/Opportunity/fields/CBT_Team_HIPI__c.field-meta.xml
<CustomField>
    <fullName>CBT_Team_HIPI__c</fullName>
    <label>HIPI CBT Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBT_HIPI__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aero Level Other</fullName>
            </value>
            <value>
                <fullName>Airbus Companies</fullName>
            </value>
            <value>
                <fullName>Air Mobility, Surveillance &amp; Engagement</fullName>
            </value>
            <value>
                <fullName>AMCOM/SOCOM/CECOM</fullName>
            </value>
            <value>
                <fullName>AMFS</fullName>
            </value>
            <value>
                <fullName>APAC OEM</fullName>
            </value>
            <value>
                <fullName>APEX Non-EMEA</fullName>
            </value>
            <value>
                <fullName>Asia Pacific BGA</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Americas</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Asia Pacific</fullName>
            </value>
            <value>
                <fullName>ATR Airlines EMEAI</fullName>
            </value>
            <value>
                <fullName>ATR Other</fullName>
            </value>
            <value>
                <fullName>AVCC</fullName>
            </value>
            <value>
                <fullName>Avions de Transport Regional</fullName>
            </value>
            <value>
                <fullName>Bendix King</fullName>
            </value>
            <value>
                <fullName>BGA Other</fullName>
            </value>
            <value>
                <fullName>Boeing ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier BGA</fullName>
            </value>
            <value>
                <fullName>Business Aviation</fullName>
            </value>
            <value>
                <fullName>Canadian Military</fullName>
            </value>
            <value>
                <fullName>Comm Helo &amp; A/M Partners</fullName>
            </value>
            <value>
                <fullName>D&amp;S ADA Other</fullName>
            </value>
            <value>
                <fullName>D&amp;S IDC Other</fullName>
            </value>
            <value>
                <fullName>D&amp;S OTHER</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>DLA</fullName>
            </value>
            <value>
                <fullName>Embraer ATR</fullName>
            </value>
            <value>
                <fullName>Embraer BGA</fullName>
            </value>
            <value>
                <fullName>EMEAI BGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>