src/objects/Opportunity/fields/CBT_Team_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>CBT_Team_Tier_3__c</fullName>
    <inlineHelpText>CBT Team responsible for this opportunity</inlineHelpText>
    <label>CBT Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBT_Tier_2__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACST</fullName>
            </value>
            <value>
                <fullName>Advanced Electronics</fullName>
            </value>
            <value>
                <fullName>Advanced Solutions</fullName>
            </value>
            <value>
                <fullName>Aero Level Other</fullName>
            </value>
            <value>
                <fullName>AES: Advanced Electronics &amp; Services</fullName>
            </value>
            <value>
                <fullName>Airbus Companies</fullName>
            </value>
            <value>
                <fullName>Airbus Defense &amp; Space</fullName>
            </value>
            <value>
                <fullName>Airbus Helicopters</fullName>
            </value>
            <value>
                <fullName>Americas AM</fullName>
            </value>
            <value>
                <fullName>AM Partners Defense (AMPD)</fullName>
            </value>
            <value>
                <fullName>AMS: Advanced Mechanical &amp; Services</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>APAC AM</fullName>
            </value>
            <value>
                <fullName>APAC BGA</fullName>
            </value>
            <value>
                <fullName>APAC OEM</fullName>
            </value>
            <value>
                <fullName>APEX Non-EMEA</fullName>
            </value>
            <value>
                <fullName>ASM: Advanced Sensors &amp; Microsystems</fullName>
            </value>
            <value>
                <fullName>ATE: Advanced Technology Europe</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Americas</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Asia Pacific</fullName>
            </value>
            <value>
                <fullName>ATR Airlines EMEAI</fullName>
            </value>
            <value>
                <fullName>ATR Airlines Other</fullName>
            </value>
            <value>
                <fullName>ATR Other CBT</fullName>
            </value>
            <value>
                <fullName>Australasia Defense</fullName>
            </value>
            <value>
                <fullName>AVCC</fullName>
            </value>
            <value>
                <fullName>Avions de Transport Regional</fullName>
            </value>
            <value>
                <fullName>BAAPAC</fullName>
            </value>
            <value>
                <fullName>Bendix King</fullName>
                <label>BendixKing</label>
            </value>
            <value>
                <fullName>BGA Other CBT</fullName>
            </value>
            <value>
                <fullName>Boeing/Intl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>