src/objects/Opportunity/fields/CBTTier2Formulae__c.field-meta.xml
<CustomField>
    <fullName>CBTTier2Formulae__c</fullName>
    <formula>Text( Account.CBT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBTTier2Formulae</label>
    <type>Text</type>
</CustomField>