src/objects/Opportunity/fields/Certification_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Certification_Requirements__c</fullName>
    <inlineHelpText>Direct Commercial : Non-govt
FAR 12 Commercial: Comm’l procurement rules
FAR 15 (CIJ Response): Needs Comm&apos;l Item Justification
FAR 15 Competitive: Not sole-source
FAR 15 TINA: Needs certified cost/pricing data
Foreign Military Funded: Non-US govt</inlineHelpText>
    <label>Certification Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Commercial</fullName>
            </value>
            <value>
                <fullName>FAR 12 Commercial</fullName>
            </value>
            <value>
                <fullName>FAR 15 (CIJ Response)</fullName>
            </value>
            <value>
                <fullName>FAR 15 Competitive</fullName>
            </value>
            <value>
                <fullName>FAR 15 TINA</fullName>
            </value>
            <value>
                <fullName>Foreign Military Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>