src/objects/Opportunity/fields/Close_date_changed__c.field-meta.xml
<CustomField>
    <fullName>Close_date_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close date changed</label>
    <type>Checkbox</type>
</CustomField>