src/objects/Opportunity/fields/Close_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Formula__c</fullName>
    <formula>TEXT(MONTH( CloseDate ))+&apos;/&apos;+TEXT(DAY(CloseDate))+&apos;/&apos;+TEXT(YEAR(CloseDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Formula</label>
    <type>Text</type>
</CustomField>