src/objects/Opportunity/fields/Closed_Out_by_IP_Finance__c.field-meta.xml
<CustomField>
    <fullName>Closed_Out_by_IP_Finance__c</fullName>
    <label>Closed Out by IP Finance</label>
    <type>Date</type>
</CustomField>