src/objects/Opportunity/fields/Co_Owner2__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Owner2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesEOC7</relationshipName>
    <type>Lookup</type>
</CustomField>