src/objects/Opportunity/fields/Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The owner of the pursuit. This field is populated from the Opportunity Team, Co-Owner role assignment.</inlineHelpText>
    <label>Co-Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>