src/objects/Opportunity/fields/Combined_Probability__c.field-meta.xml
<CustomField>
    <fullName>Combined_Probability__c</fullName>
    <formula>ATR_Probability__c * Program_Go_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>pGo x pWin</inlineHelpText>
    <label>Factored Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>