src/objects/Opportunity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments(Place Current Comments on Top)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>