src/objects/Opportunity/fields/Commission_Agency__c.field-meta.xml
<CustomField>
    <fullName>Commission_Agency__c</fullName>
    <label>Commission Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>