src/objects/Opportunity/fields/Commission_K_Text__c.field-meta.xml
<CustomField>
    <fullName>Commission_K_Text__c</fullName>
    <label>Commission ($K)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>