src/objects/Opportunity/fields/Content_Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Platform_Name__c</fullName>
    <label>Content Platform Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>