src/objects/Opportunity/fields/Content_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Product_Name__c</fullName>
    <label>Content Product Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>