src/objects/Opportunity/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication that Contract was Signed</inlineHelpText>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>