src/objects/Opportunity/fields/Contract_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sub_Type__c</fullName>
    <label>Sub Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AVDA</fullName>
            </value>
            <value>
                <fullName>AWARS</fullName>
            </value>
            <value>
                <fullName>CAMO</fullName>
            </value>
            <value>
                <fullName>GSE</fullName>
            </value>
            <value>
                <fullName>MLA</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>MSCA</fullName>
            </value>
            <value>
                <fullName>Product Life Cycle</fullName>
            </value>
            <value>
                <fullName>T53/T55 Tech Pubs</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>