src/objects/Opportunity/fields/Contract_Term_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_In_Years__c</fullName>
    <label>Contract Term In Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>