src/objects/Opportunity/fields/Contract_Title__c.field-meta.xml
<CustomField>
    <fullName>Contract_Title__c</fullName>
    <label>Contract Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>