src/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Contract Type</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPA</fullName>
            </value>
            <value>
                <fullName>Cost Plus</fullName>
            </value>
            <value>
                <fullName>CPAF</fullName>
            </value>
            <value>
                <fullName>CPFF</fullName>
            </value>
            <value>
                <fullName>CPIF</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>FFP</fullName>
            </value>
            <value>
                <fullName>FP/LOE</fullName>
            </value>
            <value>
                <fullName>FPIF</fullName>
            </value>
            <value>
                <fullName>FPLOE</fullName>
            </value>
            <value>
                <fullName>IDIQ</fullName>
            </value>
            <value>
                <fullName>OTA</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>SIM Commercial</fullName>
            </value>
            <value>
                <fullName>SIM Military</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>NTE</fullName>
            </value>
            <value>
                <fullName>Unpriced Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>