src/objects/Opportunity/fields/Corp_HIPI_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Corp_HIPI_Opportunity_Number__c</fullName>
    <label>Corp HIPI Opportunity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>